--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <img src="/assets/images/image-avatar.webp" alt=""> <p>Greg Hooper</p>
       
     </div>
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Dhruv Mathpal</a>.
-    </div>
+    </div> -->
   </div>
 
 </section>
